[gd_scene load_steps=11 format=3 uid="uid://fr4puk3vssf3"]

[ext_resource type="Script" path="res://Сцени слимаків/Zelenui.gd" id="1_axsdu"]
[ext_resource type="Texture2D" uid="uid://dxdx5eiifb6dy" path="res://art/orange slime/4о.png" id="2_mod2g"]
[ext_resource type="Texture2D" uid="uid://jj32afxcty65" path="res://art/orange slime/1о.png" id="2_swu6a"]
[ext_resource type="Texture2D" uid="uid://c01qsugwtj4u0" path="res://art/orange slime/2о.png" id="3_117nt"]
[ext_resource type="Texture2D" uid="uid://bqfi8bms1osde" path="res://art/orange slime/3о.png" id="4_a2yvj"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_4ydd0"]
friction = 0.0
bounce = 10.0

[sub_resource type="SpriteFrames" id="SpriteFrames_8t68g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_mod2g")
}],
"loop": false,
"name": &"Death",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_swu6a")
}, {
"duration": 1.0,
"texture": ExtResource("3_117nt")
}, {
"duration": 1.0,
"texture": ExtResource("4_a2yvj")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dh8q2"]
radius = 37.0
height = 80.0

[sub_resource type="Animation" id="Animation_jgvgs"]
resource_name = "Orange_death"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"Death", &"Death"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vodra"]
_data = {
"Orange_death": SubResource("Animation_jgvgs")
}

[node name="Zelenii" type="RigidBody2D"]
input_pickable = true
mass = 0.01
physics_material_override = SubResource("PhysicsMaterial_4ydd0")
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("1_axsdu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.242, 0.25)
sprite_frames = SubResource("SpriteFrames_8t68g")
animation = &"Death"
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_dh8q2")

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vodra")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
